[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = “0.10.8"
frost-ed25519 = “2.1”
frost-core = “2.1.0"
old_rand = { package = “rand”, version = “0.8", features = [“std”] }
serde = { version = “1.0.117", features = [“derive”] }
serde_json = “1.0.59"
[dev-dependencies]
ed25519-dalek = { version = “2.1.0”, features = [“rand_core”] }
[features]
default = [“frost”]
frost = []